--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ My Expertise Includes:
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">10 desember 1999</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Honers</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">7 Years</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+01733693420</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">01733693420</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">shobujkhan7212@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Chuadanga Jourder Para word no: 04, Bangladesh</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
@@ -294,10 +294,7 @@ Security Enhancements.
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/blog-2.jpg" alt="">
-                        <div class="blog-date">
-                            <h4 class="font-weight-bold mb-n1">01</h4>
-                            <small class="text-white text-uppercase">Jan</small>
-                        </div>
+
                     </div>
                     <h5 class="font-weight-medium mb-4">Figma to WordPress development</h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">See Project</a>
@@ -305,10 +302,7 @@ Security Enhancements.
                 <div class="col-lg-4 mb-5">
                     <div class="position-relative mb-4">
                         <img class="img-fluid rounded w-100" src="img/blog-3.jpg" alt="">
-                        <div class="blog-date">
-                            <h4 class="font-weight-bold mb-n1">01</h4>
-                            <small class="text-white text-uppercase">Jan</small>
-                        </div>
+
                     </div>
                     <h5 class="font-weight-medium mb-4">HTML to WordPress development</h5>
                     <a class="btn btn-sm btn-outline-primary py-2" href="">See Project</a>
